@@ -25,17 +25,19 @@ popupeditableIoPanel.cannotAccessFile=Cannot access file name {0}\nAborting expo
 popupeditableIoPanel.exportError3=Export Error
 popupeditableIoPanel.notANormalFile=File is not a normal file.\nCannot do export to a directory or system file.
 popupeditableIoPanel.exportError4=Export Error
-popupeditableIoPanel.notWriteable=File is not writeable.\nChange file permissions or select a differnt file for export.
+popupeditableIoPanel.notWriteable=File is not writeable.\nChange file permissions or select a different file for export.
 popupeditableIoPanel.exportError5=Export Error
 popupeditableIoPanel.fileOverwrite=File {0} already exists.\n\nDo you wish to overwrite this file?
 popupeditableIoPanel.overwriteWarning=File Overwrite Warning
-popupeditableIoPanel.createFileError=Failed to create file {0}.\nChange file name or select a differnt file for export.
+popupeditableIoPanel.createFileError=Failed to create file {0}.\nChange file name or select a different file for export.
 popupeditableIoPanel.exportError6=Export Error
 popupeditableIoPanel.cannotOpenFile=Cannot open file {0}.\nError was:{1}
 popupeditableIoPanel.exportError7=Export Error
 popupeditableIoPanel.cannotFindFile=Cannot find file {0}\nCheck file name and re-try export.
 popupeditableIoPanel.exportError8=Export Error
 popupeditableIoPanel.exportedToFile=Data Successfully exported to file {0}
+popupeditableIoPanel.ok=Ok
+popupeditableIoPanel.ok.open.in.file.manager= Open in file manager
 popupeditableIoPanel.exportSuccess=Export Success
 popupeditableIoPanel.cannotExec=Cannot execute a null command.\nPlease enter a command in the Command field before clicking on Execute.
 popupeditableIoPanel.executeError=Execute Error
