@@ -6,7 +6,8 @@ Not yet released, available in our GIT repository, snapshots and future releases
 
 Enhancements:
 
-Table cell data popup: File export creates parent directories when needed.
+Table cell data popup: File export creates parent directories when needed
+  and the export finished dialog offers to open the export file's directory.
 
 When data is copied to a new window, the window now offers the usual data find function.
 
